# SimpleHumanProgram2025

./: .clang-format  3DxTraceNL.vcxproj  3DxTraceNL.vcxproj.filters  3dxware sdk.props  ApplyMotionImplementation.md  BVH.cpp  BVH.h  CApertureRay.hpp  CCamera3D.hpp  CCommandEventArgs.hpp  CEventArgs.hpp  CKeyEventArgs.hpp  CMakeLists.txt  CModel3D.hpp  CModel3DGroup.hpp  CMouseButtonEventArgs.hpp  CNavigationModel.cpp  CNavigationModel.hpp  CPivot3D.hpp  CSpaceMouseController.cpp  CSpaceMouseController.hpp  CSpaceMouseTransform.cpp  CSpaceMouseTransform.hpp  CViewport3D.hpp  CViewportViewModel.cpp  CViewportViewModel.hpp  DEBUGGING_NOTES.md  ForwardKinematicsApp.cpp  ForwardKinematicsApp.h  ISignals.hpp  IViewModelNavigation.hpp  InverseKinematicsCCDApp.cpp  InverseKinematicsCCDApp.h  KeyframeMotionPlaybackApp.cpp  KeyframeMotionPlaybackApp.h  Matrix3D.hpp  MatrixTransform3D.hpp  MotionApp-DESKTOP-NQRG8N6.cpp  MotionApp.cpp  MotionApp.h  (+52 more)
.github/: copilot-instructions.md
PerformanceTests1/: PerformanceTests1.cpp  PerformanceTests1.vcxproj  PerformanceTests1.vcxproj.filters
nod/: nod.hpp
